--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,9 +1,10 @@
-{% extends "index.html" %}
+<!-- {% extends "index.html" %}
 
 {% block title %}
 
 {% endblock %}
 
 {% block body %}
-Contact Us
-{% endblock body %}
+{% endblock body %} -->
+
+<h1>Hekk</h1>
