--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">My First App</a>
+        <a class="navbar-brand">My First App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="../">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact-us/">Contact Us</a>
+              <a class="nav-link" href="../contact-us/">Contact Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
