Added template inheritance

--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,10 +1,9 @@
-<!-- {% extends "index.html" %}
+{% extends 'base.html' %}
 
 {% block title %}
-
+contact us
 {% endblock %}
 
 {% block body %}
-{% endblock body %} -->
-
 <h1>Hekk</h1>
+{% endblock body %}
