--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,9 +1,38 @@
 {% extends 'base.html' %}
 
-{% block title %}
-contact us
-{% endblock %}
+{% block title %}Contact us{% endblock %}
 
 {% block body %}
-<h1>Hekk</h1>
+<div class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://source.unsplash.com/1600x600/?contact,phone" class="d-block w-100" alt="...">
+          </div>
+      </div>
+</div>
+
+<div class="container">
+    <form method="POST" action="/contact-us">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name">
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" name="email"placeholder="Enter your email">
+        </div>
+        <div class="mb-3">
+          <label for="phone" class="form-label">Mobile Number</label>
+          <input type="tel" class="form-control" id="phone" name="phone"placeholder="Enter your mobile number">
+        </div>
+        <div class="mb-3">
+            <label for="Textarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="Textarea1" rows="3" name="textarea"placeholder="Enter some text"></textarea>
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+</div>
 {% endblock body %}
+
