--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 	<div class="container my-0">
 	{% if messages %}
 	{% for message in messages %}
-	<div class="alert alert-{{message.tag}} alert-dismissible fade show" role="alert">
+	<div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
 	<strong>{{message}}</strong>
 	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
